2003-11-12  Thomas Koeller <thomas.koeller@baslerweb.com>

        * cdl/linux.cdl:
        * include/asm/page.h:
        Make page size configurable via cdl.

2003-10-18  Gary Thomas  <gary@mlbassoc.com>

        * src/rbtree.c (rb_erase): Fix bug in red-black tree which caused
        node corruption - merge from external sources, found by Scott 
	Wilkerson.

2003-10-18  Savin Zlobec <savin@elatec.si>

        * include/linux/rbtree.h: 
        Fixed 'pointer of type `void *' used in subtraction' compiler warrning.

2003-07-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/init.h: 
	* include/linux/vmalloc.h: New dummy files so that jffs2 will
	compile.

2003-07-27  Michael Checky  <Michael_Checky@ThermoKing.com>
            Andrew Lunn <andrew.lunn@ascom.ch>
	
 	* include/linux/kernel.h: Changed the #define IS_ERR to work correctly
 	negative error values returned by the jffs2 code.

2003-06-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/linux/stat.h: Removed #defines which has been added to 
	the main eCos sys/stat.h. 

2003-01-21  David Woodhouse  <dwmw2@infradead.org>

	* New package.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2003 Red Hat.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,